--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "db:generate": "prisma generate",
     "test-sheets": "node scripts/test-sheets.mjs",
     "update-sitemap": "node scripts/update-sitemap.mjs",
     "test-supabase": "node scripts/test-supabase-connection.mjs",
