--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
-    "@supabase/supabase-js": "^2.39.0",
     "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "@types/nodemailer": "^7.0.0",
     "dotenv": "^16.5.0",
     "googleapis": "^150.0.1",
     "next": "15.3.3",
+    "nodemailer": "^7.0.5",
     "prisma": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
