--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.0",
     "@types/nodemailer": "^7.0.0",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
     "googleapis": "^150.0.1",
+    "marked": "^15.0.12",
     "next": "15.3.3",
     "nodemailer": "^7.0.5",
     "prisma": "^6.14.0",
@@ -24,6 +26,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/dompurify": "^3.0.5",
+    "@types/marked": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
