--- a/env.template
+++ b/env.template
@@ -13,3 +13,8 @@ SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 # Database Configuration (if using Prisma)
 DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
 DIRECT_URL=postgresql://postgres:[YOUR-PASSWORD]@db.[YOUR-PROJECT-REF].supabase.co:5432/postgres
+
+# Data Mode Configuration
+# Set to "true" for developer mode (uses API calls to database)
+# Set to "false" for production mode (uses static JSON files)
+NEXT_PUBLIC_USE_API_DATA=false
