--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.0",
     "@types/nodemailer": "^7.0.0",
+    "autoprefixer": "^10.4.20",
     "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
     "googleapis": "^150.0.1",
     "marked": "^15.0.12",
     "next": "15.3.3",
     "nodemailer": "^7.0.5",
+    "postcss": "^8.4.49",
     "prisma": "^6.14.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,11 +35,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
