--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
     "@prisma/client": "^6.14.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@types/dompurify": "^3.0.5",
+    "@types/marked": "^5.0.2",
+    "@types/node": "^20",
     "@types/nodemailer": "^7.0.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.3",
     "googleapis": "^150.0.1",
     "marked": "^15.0.12",
     "next": "15.3.3",
@@ -26,17 +33,10 @@
     "prisma": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/dompurify": "^3.0.5",
-    "@types/marked": "^5.0.2",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3"
   }
 }
