--- a/public/data/company-settings.json
+++ b/public/data/company-settings.json
@@ -1,1 +1,18 @@
-{}
+{
+  "id": "cmgdxteil00u1os6hv6or1hk2",
+  "company_name": "SUNBRIX Constructions",
+  "contact_email": "sunbrix.co@gmail.com",
+  "contact_phone": "+91 8867920940",
+  "show_facebook": false,
+  "facebook_url": null,
+  "show_instagram": false,
+  "instagram_url": null,
+  "show_google": false,
+  "google_url": null,
+  "show_youtube": false,
+  "youtube_url": null,
+  "terms_conditions": null,
+  "privacy_policy": null,
+  "created_at": "2025-10-05T16:49:46.941Z",
+  "updated_at": "2025-10-05T18:49:30.447Z"
+}
