--- a/public/data/page-config.json
+++ b/public/data/page-config.json
@@ -1,47 +1,11 @@
 [
   {
-    "id": "page-config-1",
-    "pageId": "main-page",
-    "pageName": "Main Page",
-    "enabled": true,
-    "description": "Edit hero section, main content, and call-to-action elements",
-    "createdAt": "2024-01-01T00:00:00.000Z",
-    "updatedAt": "2024-01-01T00:00:00.000Z"
-  },
-  {
-    "id": "page-config-2",
-    "pageId": "about-us",
-    "pageName": "About Us",
-    "enabled": true,
-    "description": "Company information, team details, and company values",
-    "createdAt": "2024-01-01T00:00:00.000Z",
-    "updatedAt": "2024-01-01T00:00:00.000Z"
-  },
-  {
-    "id": "page-config-3",
-    "pageId": "testimonials",
-    "pageName": "Testimonials",
-    "enabled": true,
-    "description": "Customer reviews, ratings, and success stories",
-    "createdAt": "2024-01-01T00:00:00.000Z",
-    "updatedAt": "2024-01-01T00:00:00.000Z"
-  },
-  {
-    "id": "page-config-4",
-    "pageId": "faqs",
-    "pageName": "FAQs",
-    "enabled": true,
-    "description": "Frequently asked questions and answers",
-    "createdAt": "2024-01-01T00:00:00.000Z",
-    "updatedAt": "2024-01-01T00:00:00.000Z"
-  },
-  {
-    "id": "page-config-5",
+    "id": "cmhca0l4a0000osrv2z8kd8i2",
     "pageId": "blogs-articles",
     "pageName": "Blogs & Articles",
-    "enabled": true,
-    "description": "Blog posts, articles, and content management",
-    "createdAt": "2024-01-01T00:00:00.000Z",
-    "updatedAt": "2024-01-01T00:00:00.000Z"
+    "enabled": false,
+    "description": null,
+    "createdAt": "2025-10-29T17:35:27.437Z",
+    "updatedAt": "2025-10-29T17:35:27.437Z"
   }
 ]
