--- a/public/data/company-settings.json
+++ b/public/data/company-settings.json
@@ -6,7 +6,7 @@
   "show_facebook": true,
   "facebook_url": "https://www.facebook.com/profile.php?id=61576736536340",
   "show_instagram": true,
-  "instagram_url": "https://www.facebook.com/profile.php?id=61576736536340",
+  "instagram_url": "https://www.instagram.com/sunbrix.co?igsh=aHQ5bjFhNWdhMGV6",
   "show_google": true,
   "google_url": "https://share.google/NKDeqnkAjQ4sVrWzN",
   "show_youtube": true,
@@ -14,5 +14,5 @@
   "terms_conditions": "# Terms and Conditions\n\n## Welcome to SUNBRIX Constructions\n\nThese terms and conditions outline the rules and regulations for the use of SUNBRIX Constructions' services and website.\n\n### 1. Service Agreement\nBy engaging our construction services, you accept these terms and conditions in full. If you disagree with any part of these terms, please do not use our services.\n\n### 2. Construction Services\n- All construction work will be performed according to agreed specifications\n- Project timelines are estimates and may vary due to weather, material availability, or unforeseen circumstances\n- Payment schedules will be as per the signed contract\n\n### 3. Liability\nSUNBRIX Constructions maintains appropriate insurance coverage for all projects. Our liability is limited to the terms specified in individual project contracts.\n\n### 4. Changes to Terms\nWe reserve the right to modify these terms at any time. Updated terms will be posted on our website.\n\nContact us at sunbrix.co@gmail.com for any questions regarding these terms.",
   "privacy_policy": "# Privacy Policy\n\n## Information We Collect\n\nSUNBRIX Constructions is committed to protecting your privacy. This policy explains how we collect, use, and protect your personal information.\n\n### Personal Information\n- Name and contact details when you inquire about our services\n- Project requirements and preferences\n- Communication history for project management\n\n### How We Use Your Information\n- To provide construction services and project updates\n- To communicate about your project progress\n- To improve our services and customer experience\n\n### Information Protection\n- We use industry-standard security measures to protect your data\n- Your information is never sold or shared with third parties without consent\n- Project details remain confidential throughout and after completion\n\n### Your Rights\n- Request access to your personal information\n- Request correction of any inaccurate information\n- Request deletion of your information (subject to legal requirements)\n\n### Contact\nFor privacy concerns or to exercise your rights, contact us at sunbrix.co@gmail.com.\n\nThis policy was last updated: 11/16/2025",
   "created_at": "2025-11-16T17:09:44.877Z",
-  "updated_at": "2025-11-17T13:20:50.308Z"
+  "updated_at": "2025-11-17T18:26:10.077Z"
 }
